--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <div class="form-container">
-  <%= form_for @student do |f| %>
+  <%= form_for @student, html: { multipart: true } do |f| %>
     <div class="control-group">
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -12,7 +12,10 @@
       <%= f.label :grade %>
       <%= f.text_field :grade %>
     </div>
-    <!--TODO: Add upload picture function-->
+    <div class="control-group">
+      <%= f.label :image %>
+      <%= f.file_field :image %>
+    </div>
     <%= f.submit 'Save', class: 'btn btn-primary' %>
   <% end %>
 </div>
