--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,4 @@
 <h1><%= @student.name %></h1>
+ <%= image_tag @student.image.url(:medium) %>
+ 
+ <%= link_to 'Assignments', assignments_path(@student) %>
