--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -1,20 +1,20 @@
 <div class="form-container">
-  <%= form_for @student, html: { multipart: true } do |f| %>
+  <%= form_for @assignment, html: { multipart: true } do |f| %>
     <div class="control-group">
       <%= f.label :name %>
       <%= f.text_field :name %>
-    </div>
-    <div class="control-group">
-      <%= f.label :age %>
-      <%= f.text_field :age %>
     </div>
     <div class="control-group">
       <%= f.label :grade %>
       <%= f.text_field :grade %>
     </div>
     <div class="control-group">
-      <%= f.label :avatar %>
-      <%= f.file_field :avatar %>
+      <%= f.label :comments %>
+      <%= f.text_field :comments %>
+    </div>
+    <div class="control-group">
+      <%= f.label :assignment %>
+      <%= f.file_field :assignment %>
     </div>
     <%= f.submit 'Save', class: 'btn btn-primary' %>
   <% end %>
