--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav>
+    <%= render 'layouts/navigation' %>
+  </nav>
   <div class="container">
     <%= yield %>
   </div>
