--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -13,7 +13,7 @@
       <%= f.text_field :grade %>
     </div>
     <div class="control-group">
-      <%= f.label :avatar %>
+      <%= f.label :avatar, "Change Photo" %>
       <%= f.file_field :avatar %>
     </div>
     <%= f.submit 'Save', class: 'btn btn-primary' %>
