--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,4 @@
 <h1><%= @student.name %></h1>
+<%= link_to 'Edit', edit_student_path(@student) %>
+<%= image_tag @student.avatar_url(:thumb) if @student.avatar? %>
+<%= link_to 'Assignments', student_assignments_path(@student) %>
