fixed some file uploading/editing bugs

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,5 +2,6 @@
   <ul class="nav navbar-nav">
     <li><%= link_to 'Home', dashboard_path %></li>
     <li><%= link_to 'Students', students_path %></li>
+    <li><%= link_to 'Log out', log_out_path %></li>
   </ul>
 </nav>
