--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="form-container">
-  <%= form_for @assignment, html: { multipart: true } do |f| %>
+  <%= form_for [@student, @assignment], html: { multipart: true } do |f| %>
     <div class="control-group">
       <%= f.label :name %>
       <%= f.text_field :name %>
