--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,9 +1,11 @@
 <%= link_to 'Add Assignment', new_student_assignment_path %>
-<% @assignments.all.each do |assignment| %>
-  <%= link_to student_assignment_path(@student, assignment), class: "thumbnail col-md-3" do %>
-    <% if assignment.assignment %>
-      <%= image_tag(assignment.assignment_url) %>
+<% if @assignments.present? %>
+  <% @assignments.each do |assignment| %>
+    <%= link_to student_assignment_path(@student, assignment), class: "thumbnail col-md-3" do %>
+      <% if assignment.assignment %>
+        <%= image_tag(assignment.assignment_url) %>
+      <% end %>
+      <h1 class="caption"><%= assignment.name %></h1>
     <% end %>
-    <h1 class="caption"><%= assignment.name %></h1>
   <% end %>
 <% end %>
