--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,3 +1,3 @@
 <%= image_tag @assignment.assignment_url if @assignment.assignment? %>
-<%= link_to 'Edit', edit_student_assignment_path(@assignment) %>
-<%= link_to 'Delete', student_assignment_path(@assignment), :confirm => 'Are you sure?', :method => :delete %>
+<%= link_to 'Edit', edit_student_assignment_path(@student, @assignment) %>
+<%= link_to 'Delete', student_assignment_path(@student, @assignment), :confirm => 'Are you sure?', :method => :delete %>
