--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= render 'layouts/navigation' %>
   </nav>
   <div class="container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </div>
 </body>
