fixing form styling

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" id="navigation">
   <ul class="nav navbar-nav">
     <li><%= link_to 'Home', dashboard_path %></li>
     <li><%= link_to 'Students', students_path %></li>
