--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,4 +1,5 @@
-<h1>Welcome!</h1>
-
-<%= link_to 'Log in', log_in_path, class: "btn btn-default" %>
-<%= link_to 'Sign up', register_path, class: "btn btn-default" %>
+<div class="row text-center">
+  <h1>Welcome!</h1>
+  <%= link_to 'Log in', log_in_path, class: "btn btn-default" %>
+  <%= link_to 'Sign up', register_path, class: "btn btn-default" %>
+</div>
