--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,18 +1,14 @@
-<div class='form-container'>
-  <%= form_for @user do |f| %>
-    <%= render 'shared/errors', obj: @user %>
-    <div class='control-group'>
-      <%= f.label :username %>
-      <%= f.text_field :username %>
+<div class="row">
+  <div class="col-xs-8 col-md-6 col-md-offset-3 text-center">
+    <div class='form-container'></div>
+      <%= bootstrap_form_for @user do |f| %>
+        <%= render 'shared/errors', obj: @user %>
+          <%= f.text_field :username %>
+          <%= f.password_field :password %>
+          <%= f.password_field :password_confirmation %>
+          <%= f.email_field :email %>
+        <%= f.submit @user.new_record? ? "Register" : "Update Profile", class: 'btn btn-success' %>
+      <% end %>
     </div>
-    <div class='control-group'>
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-    </div>
-    <div class='control-group'>
-      <%= f.label :email %>
-      <%= f.email_field :email %>
-    </div>
-    <%= f.submit @user.new_record? ? "Register" : "Update Profile", class: 'btn btn-success' %>
-  <% end %>
+  </div>
 </div>
