--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,6 +2,8 @@
   <ul class="nav navbar-nav">
     <li><%= link_to 'Home', dashboard_path %></li>
     <li><%= link_to 'Students', students_path %></li>
-    <li><%= link_to 'Log out', log_out_path %></li>
+    <% if logged_in? %>
+      <li><%= link_to 'Log out', log_out_path %></li>
+    <% end %>
   </ul>
 </nav>
