--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,6 @@
 <% if obj.errors.any? %>
   <div class='row'>
-    <div class='alert alert-error span8'
+    <div class='alert alert-error span8'>
       <h5>Please fix the following errors:</h5>
       <ul>
         <% obj.errors.full_messages.each do |msg| %>
