--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,3 +2,29 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+#application{
+  background-color: #b3c2bf;
+}
+
+.custom-well{
+  background-color: #e9ece5;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.btn-dark-gray{
+  background-color: #e9ece5;
+  color: #3b3a36;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #3b3a36;
+}
+
+.btn-dark-gray:hover{
+  background-color: #3b3a36;
+  color: #e9ece5;
+  text-decoration: none;
+  border: 2px solid #3b3a36;
+}
