--- a/app/views/homeschools/edit.html.erb
+++ b/app/views/homeschools/edit.html.erb
@@ -1,10 +1,14 @@
-<div class='form-container'>
-  <%= form_for @homeschool do |f| %>
-    <%= render 'shared/errors', obj: @homeschool %>
-    <div class='control-group'>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+    <div class="custom-well">
+      <div class='form-container'>
+        <%= bootstrap_form_for @homeschool do |f| %>
+          <%= render 'shared/errors', obj: @homeschool %>
+            <%= f.text_field :name %>
+          <%= f.submit 'Update', class: 'btn btn-success' %>
+        <% end %>
+      </div>
     </div>
-    <%= f.submit 'Update', class: 'btn btn-success' %>
-  <% end %>
+  </div>
 </div>
+
