--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse" id="navigation">
   <ul class="nav navbar-nav">
-    <li><%= link_to 'Home', dashboard_path %></li>
+    <li><%= link_to 'Home', root_path %>
     <li><%= link_to 'Students', students_path %></li>
     <% if logged_in? %>
       <li><%= link_to 'Log out', log_out_path %></li>
