--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-8 col-md-6 col-md-offset-3 text-center">
+  <div class="col-xs-8 col-md-4 col-md-offset-4 text-center custom-well">
     <div class='form-container'></div>
       <%= bootstrap_form_for @user do |f| %>
         <%= render 'shared/errors', obj: @user %>
